<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreateGardenActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--name garden-->
        <LinearLayout
            android:layout_marginTop="@dimen/dp50"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <TextView
                android:text="@string/txt_name_garden"
                android:textStyle="bold"
                android:textSize="@dimen/sp17"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:textColor="@color/sick_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <EditText
                android:id="@+id/edt_garden_name"
                android:background="@drawable/bg_edt"
                android:hint="@string/edt_name_garden"
                android:paddingLeft="@dimen/dp8"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <!--address garden-->
        <LinearLayout
            android:layout_marginTop="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <TextView
                android:text="@string/txt_address_garden"
                android:textStyle="bold"
                android:textSize="@dimen/sp17"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:textColor="@color/sick_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <EditText
                android:id="@+id/edt_garden_address"
                android:background="@drawable/bg_edt"
                android:hint="@string/edt_address_garden"
                android:paddingLeft="@dimen/dp8"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <!--btn add garden-->
        <LinearLayout
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <Button
                android:id="@+id/btn_create_garden"
                android:background="@drawable/bg_btn_login"
                android:text="Tạo vườn rau"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>